<resources>
    <string name="app_name">ExperimentOne</string>
    <string name="title">中山大学课外体育积分电子认证系统</string>
    <string name="input_title">用户名:</string>
    <string name="password_title">密码:</string>
    <string name="input_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="select1">学生</string>
    <string name="select2">老师</string>
    <string name="select3">社团</string>
    <string name="select4">管理者</string>
</resources>
